bin_PROGRAMS = example_1 example_2 example_3 example_4 example_5 example_6

exflags = -g -O0
AM_LDFLAGS =
LIBS =
LDADD =

example_1_SOURCES = example_1.c
example_1_CFLAGS = $(ex_flags)
example_1_LDADD =
example_1_LDFLAGS =

example_2_SOURCES = example_2.c
example_2_CFLAGS = $(ex_flags)

example_3_SOURCES = example_3.c
example_3_LDFLAGS = -pthread
example_3_LDADD =
example_3_CFLAGS = $(ex_flags)

example_4_SOURCES = example_4.c
example_4_CFLAGS = $(ex_flags)

example_5_SOURCES = example_5_main.c example_5_bar.c example_5_bar.h
example_5_CFLAGS = $(ex_flags)

example_6_SOURCES = example_6.c
example_6_CFLAGS = $(ex_flags)
